# Papo

./: .editorconfig  .gitignore  .gitlab-ci.yml  AGENTS.md  Cargo.toml  README.md  build.rs  default.nix  flake.nix  meson.build  meson_options.txt  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yml
build-aux/: com.amanoteam.Papo.Devel.json  com.amanoteam.Papo.json  com.amanoteam.papo.Devel.json
data/: com.amanoteam.Papo.desktop.in.in  com.amanoteam.Papo.gschema.xml.in  com.amanoteam.Papo.metainfo.xml.in.in  com.amanoteam.Papo.service.in  com.amanoteam.papo.desktop.in.in  com.amanoteam.papo.gschema.xml.in  com.amanoteam.papo.metainfo.xml.in.in  meson.build
data/resources/: meson.build  resources.gresource.xml  style.scss
data/resources/stylesheet/: _chat_list.scss  _chat_view.scss  _common.scss  _login_view.scss  _session_view.scss  _vendor.scss  _welcome_view.scss  _widgets.scss
po/: LINGUAS  POTFILES.in  de.po  es.po  fr.po  id.po  meson.build  papo.pot  pt_BR.po
src/: app.rs  application.rs  config.rs  config.rs.in  formatter.rs  main.rs  meson.build  utils.rs
src/client/: component.rs  mod.rs  whatsapp.rs
src/components/: chat_list.rs  chat_view.rs  login.rs  mod.rs  search_view.rs  welcome.rs
src/modals/: about.rs  shortcuts.rs
src/session/: avatar_cache.rs  cache.rs  client.rs  mod.rs
src/state/: chat.rs  media.rs  message.rs  mod.rs
src/store/: database.rs  mod.rs
src/widgets/: mod.rs  pair_step.rs  pairing_cell.rs
