[package]
name = "papo"
version = "0.1.0"
authors = ["Andriel Ferreira <andrielfr@proton.me>"]
edition = "2024"
publish = false
license = "Apache-2.0"
repository = "https://github.com/AmanoTeam/Papo"
description = "GTK client for WhatsApp Web"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
codegen-units = 1

[dependencies]
# GTK
adw = { version = "0.8", package = "libadwaita", features = ["v1_8"] }
relm4 = { version = "0.10", features = ["libadwaita", "gnome_48"] }
relm4-icons = "0.10"
relm4-components = { version = "0.10", features = ["libadwaita"] }

# Database
libsql = { version = "0.9", features = ["encryption"] }

# Utilities
rand = "0.10"
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1.22", features = ["v4"] }
strum = { version = "0.27", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "clock",
] }
os_info = "3.14"
indexmap = "2.13"
rlibphonenumber = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Localization
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# Image handling
# image = { version = "0.25", default-features = false, features = [
#   "png",
#   "jpeg",
#   "webp",
#   "rayon",
# ] }
glycin = { version = "3.0", features = ["gdk4"] }
fast_qr = { version = "0.13", features = ["image"] }

# Futures
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "sync"] }
futures-util = { version = "0.3", default-features = false, features = [
  "std",
  "async-await",
] }

# WhatsApp
[dependencies.wacore]
git = "https://github.com/jlucaso1/whatsapp-rust"
rev = "320fe331603171a1cb21c88c8957c366590e08a7"

[dependencies.waproto]
git = "https://github.com/jlucaso1/whatsapp-rust"
rev = "320fe331603171a1cb21c88c8957c366590e08a7"

[dependencies.whatsapp-rust]
git = "https://github.com/jlucaso1/whatsapp-rust"
rev = "320fe331603171a1cb21c88c8957c366590e08a7"

[dependencies.whatsapp-rust-tokio-transport]
git = "https://github.com/jlucaso1/whatsapp-rust"
rev = "320fe331603171a1cb21c88c8957c366590e08a7"

[dependencies.whatsapp-rust-ureq-http-client]
git = "https://github.com/jlucaso1/whatsapp-rust"
rev = "320fe331603171a1cb21c88c8957c366590e08a7"

[build-dependencies]
relm4-icons-build = "0.10"
