[package]
name = "papo"
version = "0.1.0"
authors = ["Andriel Ferreira <andrielfr@proton.me>"]
edition = "2024"
publish = false
license = "Apache-2.0"
repository = "https://github.com/AmanoTeam/Papo"
description = "GTK client for WhatsApp Web"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
codegen-units = 1

[dependencies]
# GTK
adw = { version = "0.9", package = "libadwaita", features = ["v1_8"] }
relm4 = { version = "0.11", features = ["libadwaita", "gnome_49"] }
relm4-icons = "0.11"
relm4-components = { version = "0.11", features = ["libadwaita"] }

# Database
libsql = { version = "0.9", features = ["encryption"] }

# Utilities
rand = "0.10"
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1.22", features = ["v4"] }
strum = { version = "0.28", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "clock",
] }
os_info = "3.14"
indexmap = "2.14"
rlibphonenumber = "1.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Localization
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# Image handling
# image = { version = "0.25", default-features = false, features = [
#   "png",
#   "jpeg",
#   "webp",
#   "rayon",
# ] }
glycin = { version = "3.1", features = ["gdk4"] }
fast_qr = { version = "0.13", features = ["image"] }

# Futures
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "sync"] }
futures-util = { version = "0.3", default-features = false, features = [
  "std",
  "async-await",
] }

# WhatsApp
whatsapp-rust = "0.5"
whatsapp-rust-tokio-transport = "0.5"
whatsapp-rust-ureq-http-client = "0.5"
wacore = "0.5"
waproto = "0.5"

[build-dependencies]
relm4-icons-build = "0.11"
