# tombi: format.rules.table-keys-order.disabled = true

[package]
name = "papo"
version = "0.1.0"
authors = ["Andriel Ferreira <andrielfr@proton.me>"]
edition = "2024"
publish = false
license = "Apache-2.0"
repository = "https://github.com/AmanoTeam/Papo"
description = "GTK client for WhatsApp Web"

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
# tombi: format.rules.table-keys-order.disabled = true

# GTK
adw = { package = "libadwaita", version = "0.9", features = ["v1_9"] }
relm4 = { version = "0.11", features = ["gnome_50", "libadwaita"] }
relm4-icons = "0.11"
relm4-components = { version = "0.11", features = ["libadwaita"] }

# Database
libsql = { version = "0.9", features = ["encryption"] }

# Utilities
rand = "0.10"
uuid = { version = "1.22", features = ["v4"] }
strum = { version = "0.28", features = ["derive"] }
chrono = {
  version = "0.4",
  default-features = false,
  features = ["clock", "std"]
}
os_info = "3.14"
indexmap = "2.14"
rlibphonenumber = "1.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Localization
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# Image handling
# image = { version = "0.25", default-features = false, features = [
#   "png",
#   "jpeg",
#   "webp",
#   "rayon",
# ] }
glycin = { version = "3.1", features = ["gdk4"] }
fast_qr = { version = "0.13", features = ["image"] }

# Futures
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "sync"] }
futures-util = {
  version = "0.3",
  default-features = false,
  features = ["async-await", "std"]
}

# WhatsApp
waepic = {
  git = "https://git.amanoteam.com/AmanoTeam/waepic",
  rev = "7ad51e",
  features = ["rustls", "tokio"]
}

[build-dependencies]
relm4-icons-build = "0.11"
